--- a/index.html
+++ b/index.html
@@ -274,8 +274,7 @@
     </div>
     
     <div class="photo-comet">
-      <img src="maham1.png" alt="Maham's Beautiful Photo">
-    </div>
+<img src="https://raw.githubusercontent.com/MuhammadZohaib6301/countdownn.github.io/4876e297f61584978283ae3d631c3675e0e337a3/maham1.png" alt="Maham's Beautiful Photo">    </div>
     
     <div class="special-message">
       The universe celebrates you today!<br>
